gen/cloudfunctions/v1beta2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudfunctions1_beta2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudfunctions/v1beta2/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/cloudfunctions/v1beta2/lib/src/lib.rs:1313:13
     |
1313 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `functions::FunctionsActions`
    --> gen/cloudfunctions/v1beta2/lib/src/lib.rs:1347:17
     |
1347 |                 functions::FunctionsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `functions::FunctionsActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-cloudfunctions1_beta2`.

To learn more, run the command again with --verbose.
